# SPDX-FileCopyrightText: 2017 - 2023 Kamila Borowska <kamila@borowska.pw>
# SPDX-FileCopyrightText: 2021 Alex Sayers <alex@asayers.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "enum-map"
version = "3.0.0-beta.2"
authors = ["Kamila Borowska <kamila@borowska.pw>"]
edition = "2021"
rust-version = "1.66"
repository = "https://codeberg.org/xfix/enum-map"
license = "MIT OR Apache-2.0"
description = "A map with C-like enum keys represented internally as an array"
keywords = ["data-structure", "no_std", "enum"]
categories = ["data-structures", "no-std"]
documentation = "https://docs.rs/enum-map"
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
arbitrary = { version = "1.0.0", optional = true }
borsh = { version = "1.2.0", default-features = false, optional = true }
bytemuck = { version = "1.18.0", optional = true }
enum-map-derive = { version = "=1.0.0-beta.1", path = "../enum-map-derive", optional = true }
serde = { version = "1.0.103", optional = true, default-features = false }

[dev-dependencies]
bincode = "1.3.3"
enum-map-derive = { path = "../enum-map-derive" }
serde = { version = "1.0.103", features = ["derive"] }
serde_test = "1.0.176"
serde_json = "1.0.99"

[package.metadata.docs.rs]
features = ["arbitrary", "bytemuck", "serde"]

[features]
default = ["derive"]
arbitrary = ["dep:arbitrary"]
borsh = ["dep:borsh"]
bytemuck = ["dep:bytemuck"]
derive = ["dep:enum-map-derive"]
serde = ["dep:serde"]
